@@ -1,3 +1,6 @@
+Sept. 19th 2011
+	add file binary search module and string utilities.
+
 Sept. 18th 2011
 	add aligned hashing benchmark program
 
